A Better header for the report

--- a/rapport/rapport.tex
+++ b/rapport/rapport.tex
@@ -5,12 +5,24 @@
 \usepackage{minted}
 
 
-\title{The Shell Adventure}
-\author{Jordan Dalcq}
-\date{2018 - 2019}
-
 \begin{document}
-\maketitle
+\begin{titlepage}
+  \centering
+  {\scshape Institut Saint Jean Berchmans - Sainte Marie\par\vspace{0.2cm} Section informatique\par \vspace{0.2cm}}
+  \vspace{1cm}
+  \includegraphics[width=0.25\textwidth]{img/image2}\par\vspace{1cm}
+  {\scshape \LARGE Programmation \par}
+  \vspace{0.2cm}
+	{\scshape \Large The Shell Adventure\par}
+  \vspace{3cm}
+  {\Large\itshape Travail de fin d'étude \par réalisé par \par Jordan Dalcq \par}
+  \vfill
+  \scshape Année académique 2018 - 2019
+  \title{The Shell Adventure}
+  \author{Jordan Dalcq}
+  \date{2018 - 2019}
+\end{titlepage}
+
 \tableofcontents
 
 \pagestyle{empty}
@@ -32,7 +44,6 @@ Je tiens tout d'abord à remercier mon grand père Yvan, qui m'a introduit au mo
 \section*{Contexte}
 Durant quelques années j’ai été mentor au Coderdojo de Liège durant 2 ans. J’animais un atelier Python / Linux auprès de jeunes âgés entre 14 et 18 ans. Le problème lors de l’apprentissage était qu’ils ne savaient pas quelle commande / fonction utiliser dans un cas précis. Dans ce projet, j’ai décidé de me focaliser sur le terminal bash et de présenter un outil d’ apprentissage basé sur le visuel.
 \chapter{Présentation}
-
 \section{Fonctionnement}
 L’idée de base est assez simple, il faut taper des commandes pour interagir avec le monde qui nous entoure.
 \newline
